manifests/admission/val-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "validate.kluster.aniruddha.dev"
webhooks:
  - matchPolicy: Equivalent
    admissionReviewVersions:
      - v1
      - v1beta1
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - "v1"
        operations:
          - "CREATE"
        resources:
          - "pods"
        scope: "Namespaced"
    clientConfig:
      service:
        path: "/validate/pod"
        namespace: "default"
        name: "validation-kontroller"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZ2VENDQTZXZ0F3SUJBZ0lVWXlDL1VtOG15Z3czVGovY2dZUE8xTHhiV0Zjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1h6RUxNQWtHQTFVRUJoTUNTVTR4Q3pBSkJnTlZCQWdNQWxkQ01SQXdEZ1lEVlFRSERBZExiMnhyWVhSaApNUTB3Q3dZRFZRUUtEQVJUWld4bU1Rd3dDZ1lEVlFRTERBTkVaWFl4RkRBU0JnTlZCQU1NQzNkM2R5NXJPSE11ClkyOXRNQjRYRFRJek1ETXhNakV3TURBd05Wb1hEVEkwTURNeE1URXdNREF3TlZvd1h6RUxNQWtHQTFVRUJoTUMKU1U0eEN6QUpCZ05WQkFnTUFsZENNUkF3RGdZRFZRUUhEQWRMYjJ4cllYUmhNUTB3Q3dZRFZRUUtEQVJUWld4bQpNUXd3Q2dZRFZ [...]
    name: "validate.kluster.aniruddha.dev"
    sideEffects: None
    timeoutSeconds: 5
